# symbolic-prover-api

./: CHANGELOG.md  Dockerfile  Makefile  README.md  cabal.project  config-template.yaml  config.yaml  docker-compose.yml  hie.yaml  symbolic-prover-api.cabal  zkfold-prover-api.cabal
app/: Main.hs
examples/: simple-witness.json  uuid.json
src/ZkFold/Prover/API/: Database.hs  Encryption.hs  Executor.hs  Handler.hs  Orphans.hs  Prove.hs  Robots.hs  Server.hs  Types.hs  Utils.hs
src/ZkFold/Prover/API/Handler/: Delegation.hs  Encrypted.hs  General.hs  Keys.hs  ProofStatus.hs  ProveEncrypted.hs  ProveUnencrypted.hs  Stats.hs  Unencrypted.hs
src/ZkFold/Prover/API/Types/: Args.hs  Common.hs  Config.hs  Ctx.hs  Encryption.hs  Errors.hs  Prove.hs  ProveAlgorithm.hs  Stats.hs  Status.hs  ZkProof.hs
web/: robots.txt
