cabal-version:      3.0
name:               symbolic-prover-api
version:            0.1.0.0
synopsis:           zkFold's symbolic prover backend API for constructing ZK proofs
homepage:           https://zkfold.io/
license:            MIT
license-file:       LICENSE
author:             Vladimir Sinyakov, Evgenii Samodelov, Vladimir Morozov
maintainer:         vlasin@zkfold.io
build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-files:         web/robots.txt

Flag pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Werror
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -Wunused-packages
      -O2
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      DeriveGeneric
      DerivingVia
      GADTs
      LambdaCase
      MultiWayIf
      OverloadedStrings
      RecordWildCards
      RoleAnnotations
      TemplateHaskell
      TypeFamilies
      TypeFamilyDependencies
      UndecidableInstances
      UnicodeSyntax
      ViewPatterns
      ImportQualifiedPost
      FlexibleContexts
      GeneralizedNewtypeDeriving
      BangPatterns
      TypeOperators
      StandaloneKindSignatures
      ExplicitForAll
      TypeApplications
      ScopedTypeVariables

library
  import:              options
  
  exposed-modules:     
    ZkFold.Prover.API.Server
    ZkFold.Prover.API.Encryption
    ZkFold.Prover.API.Executor
    ZkFold.Prover.API.Orphans
    ZkFold.Prover.API.Handler.General
    ZkFold.Prover.API.Handler.Encrypted
    ZkFold.Prover.API.Handler.Unencrypted
    ZkFold.Prover.API.Types
    ZkFold.Prover.API.Robots
    ZkFold.Prover.API.Types.Config
    ZkFold.Prover.API.Types.Common
    ZkFold.Prover.API.Types.Ctx
    ZkFold.Prover.API.Types.Encryption
    ZkFold.Prover.API.Types.Errors
    ZkFold.Prover.API.Types.Prove
    ZkFold.Prover.API.Types.ProveAlgorithm
    ZkFold.Prover.API.Types.Stats
    ZkFold.Prover.API.Utils
    ZkFold.Prover.API.Database
  other-modules:
    ZkFold.Prover.API.Types.Status
  build-depends:       
      base >=4.18.1.0 && <5
    , cryptonite ^>=0.30
    , directory
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , aeson
    , aeson-casing
    , insert-ordered-containers
    , bytestring
    , text
    , lens
    , warp
    , deriving-aeson
    , mtl
    , stm
    , swagger2
    , sqlite-simple
    , resource-pool
    , time
    , uuid
    , wai
    , wai-cors
    , wai-extra
    , http-types
    , symbolic-examples
    , cron
    , optparse-applicative
    , yaml
  hs-source-dirs:      src

executable symbolic-prover-api
  import:           options
  main-is:          Main.hs
  build-depends:    base >=4.18.1.0 && <5
    , symbolic-prover-api
    , optparse-applicative
    , bytestring
    , symbolic-base
    , swagger2
  hs-source-dirs:   app
