cabal-version:      3.0
name:               zkfold-prover-api
version:            0.1.0.0
synopsis:           ZkFold's prover backend API for constructing ZK proofs
homepage:           https://zkfold.io/
license:            MIT
license-file:       LICENSE
author:             Vardominator, Murat Kasimov, Ilya Barishnikov, Vladimir Sinyakov
maintainer:         vlasin@zkfold.io
build-type:         Simple
extra-doc-files:    CHANGELOG.md

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Werror
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -Wunused-packages
      -O2
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      DeriveGeneric
      DerivingVia
      GADTs
      LambdaCase
      MultiWayIf
      OverloadedStrings
      RecordWildCards
      RoleAnnotations
      TemplateHaskell
      TypeFamilies
      TypeFamilyDependencies
      UndecidableInstances
      UnicodeSyntax
      ViewPatterns
      ImportQualifiedPost
      FlexibleContexts
      GeneralizedNewtypeDeriving
      BangPatterns
      TypeOperators
      StandaloneKindSignatures
      ExplicitForAll
      TypeApplications
      ScopedTypeVariables

library
  import:              options
  
  exposed-modules:     
    ZkFold.Prover.API.Server
    ZkFold.Prover.API.Encryption
    ZkFold.Prover.API.Executor
    ZkFold.Prover.API.Orphans
    ZkFold.Prover.API.Types
    ZkFold.Prover.API.Types.Common
    ZkFold.Prover.API.Types.Ctx
    ZkFold.Prover.API.Types.Encryption
    ZkFold.Prover.API.Types.Errors
    ZkFold.Prover.API.Types.Prove
    ZkFold.Prover.API.Types.ProveAlgorithm
    ZkFold.Prover.API.Handler
    ZkFold.Prover.API.Utils
    ZkFold.Prover.API.Database
  build-depends:       
      base >=4.18.1.0 && <5
    , cryptonite ^>=0.30
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , aeson
    , bytestring
    , text
    , lens
    , warp
    , aeson
    , bytestring
    , cryptonite
    , deriving-aeson
    , lens
    , mtl
    , stm
    , servant-server
    , servant-swagger-ui
    , servant-openapi3
    , bytestring
    , openapi3
    , servant-swagger
    , sqlite-simple
    , resource-pool
    , text
    , time
    , uuid
    , wai
    , wai-cors
    , wai-extra
    , warp
  hs-source-dirs:      src

executable zkfold-prover-api
    import:           options
    main-is:          Main.hs
    build-depends:    base >=4.18.1.0 && <5
                    , zkfold-prover-api
                    , optparse-applicative
                    , bytestring
                    , symbolic-base
                    , openapi3

    hs-source-dirs:   app
